--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,24 +8,40 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".BlingeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="@string/app_id" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="@string/client_id" />
+
         <activity
-            android:name=".BlingeLogin"
+            android:name=".loginmanager.BlingeLogin"
             android:label="@string/app_name">
+
+        </activity>
+        <activity
+            android:name=".BlingeBaseActivity"
+            android:label="@string/title_activity_blinge_base"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".loginmanager.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".BlingeBaseActivity"
-            android:label="@string/title_activity_blinge_base"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:name=".postlogin.BlingeLandingPage"
+            android:label="@string/title_activity_blinge_landing_page"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
