--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.blinge.deliveryguy">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
+    <!-- <uses-permission android:name="android.permission.READ_PROFILE" /> -->
+    <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".BlingeApplication"
@@ -23,9 +24,7 @@
 
         <activity
             android:name=".loginmanager.BlingeLogin"
-            android:label="@string/app_name">
-
-        </activity>
+            android:label="@string/app_name"/>
         <activity
             android:name=".BlingeBaseActivity"
             android:label="@string/title_activity_blinge_base"
@@ -37,11 +36,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".postlogin.BlingeLandingPage"
+            android:name=".ordermanager.BlingeLandingPage"
             android:label="@string/title_activity_blinge_landing_page"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ordermanager.ShowOrderListActivity"
+            android:label="@string/title_activity_show_order_list"
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
